# scribe

./: .clang-tidy  CMakeLists.txt  Makefile  README.md  todo.txt
scribe/: Array.cc  Array.h  CMakeLists.txt  Command.cc  Command.h  ComplexTypeNotion.cc  ComplexTypeNotion.h  Entity.h  EntityFormatter.cc  EntityFormatter.h  EntityProcessor.h  Function.cc  Function.h  Leaf.cc  Leaf.h  Meta.cc  Meta.h  Node.cc  Node.h  Path.cc  Path.h  PathElement.cc  PathElement.h  PathFormat.cc  PathFormat.h  PathTrace.cc  PathTrace.h  RegisterableTypeNotion.cc  RegisterableTypeNotion.h  Tree.cc  Tree.h  TypeName.cc  TypeName.h  TypeNotion.cc  TypeNotion.h  TypeRegistry.cc  TypeRegistry.h  common_helpers.h  exception.h  makeString.h  (+1 more)
tests/: Array.cc  BasicPathFormat.cc  CMakeLists.txt  Command.cc  ComplexTypeNotion.cc  EntityFormatter.cc  Function.cc  Leaf.cc  Meta.cc  Node.cc  Path.cc  Tree.cc  TypeName.cc  TypeRegistry.cc  basic_types.cc  common.h  tree_helpers.h
